--- a/index.html
+++ b/index.html
@@ -619,8 +619,7 @@ The menu also allowed for multiple players (up to four) to be entered into the g
   </div>
   </main>
   <footer>
-    <p>This page was last edited on 1 September 2019, at 17:06 (UTC).
-</p>
+    <p>This page was last edited on 1 September 2019, at 17:06 (UTC).</p>
     <p>Text is available under the <a href="https://en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution-ShareAlike_3.0_Unported_License" target="_blank">Creative Commons Attribution-ShareAlike License</a>; additional terms may apply. By using this site, you agree to the <a href="https://foundation.wikimedia.org/wiki/Terms_of_Use/en" target="_blank">Terms of Use</a> and <a href="https://foundation.wikimedia.org/wiki/Privacy_policy" target="_blank">Privacy Policy</a>. Wikipedia® is a registered trademark of the <a href="https://wikimediafoundation.org/" target="_blank">Wikimedia Foundation, Inc.</a>, a non-profit organization.</p>
     <ul>
       <li><a href="https://foundation.wikimedia.org/wiki/Privacy_policy" target="_blank">Privacy policy</a></li>
